add english folder

--- a/en/products_en.html
+++ b/en/products_en.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="../css/ionicons.min.css">
+    <link rel="stylesheet" href="../css/flaticon.css">
+    <link rel="stylesheet" href="../css/icomoon.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
     <div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item active"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item "><a href="news_en.html" class="nav-link">News</a></li>
@@ -41,7 +41,7 @@
     </div>
 </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_6.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_6.jpg');">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -50,11 +50,11 @@
 <!--				<a ><h5 class="mb-2 bread">依托欧洲积累的本地资源为企业提供资源对接、业务拓展和服务</h5></a>-->
 				<p class="breadcrumbs">
 				<p>
-					<a class="btn btn-info px-4 py-3"> Smartphone</a>
-					<a class="btn btn-info px-4 py-3"> Network Products</h5></a>
-					<a class="btn btn-info px-4 py-3"> Security Products</a>
-					<a class="btn btn-info px-4 py-3"> Solar Products</a>
-					<a class="btn btn-info px-4 py-3"> Energy Storage Products</a>
+					<a class="btn btn-info px-3 py-3"> Smartphone</a>
+					<a class="btn btn-info px-3 py-3"> Network Products</h5></a>
+					<a class="btn btn-info px-3 py-3"> Security Products</a>
+					<a class="btn btn-info px-3 py-3"> Solar Products</a>
+					<a class="btn btn-info px-3 py-3"> Energy Storage Products</a>
 
 <!--					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>-->
 <!--					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>-->
@@ -73,7 +73,7 @@
 	<div class="container ">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-12 suscribete_form text-center">
-				<div class="py-5 px-3 text-center align-content-center" style="background-image: url('images/bg_13.jpg');">
+				<div class="py-5 px-3 text-center align-content-center" style="background-image: url('../images/bg_13.jpg');">
 						<h1 class="mb-2 align-self-center align-items-center" style = "color: #f5f3f3;alignment: center">Channel Expansion · Resource Connection · Business Agent</h1>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a  class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/mobile/smartphone.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
@@ -109,7 +109,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
 							<span class="yr">2023</span>
@@ -128,7 +128,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a  class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../ittech/security/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
@@ -145,7 +145,7 @@
 			</div>
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a  class="block-20 d-flex align-items-end" style="background-image: url('products/solar/1.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/solar/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
@@ -163,7 +163,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a  class="block-20 d-flex align-items-end" style="background-image: url('products/battery/1.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../products/battery/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
@@ -185,7 +185,7 @@
 
 
 
-<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
@@ -195,17 +195,17 @@
 					<div class="row no-gutters">
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/whatsapp.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+									<p><img src="../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/wechat.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+									<p><img src="../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
@@ -229,7 +229,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -244,9 +244,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -255,9 +255,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -273,9 +273,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -293,7 +293,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -320,21 +320,21 @@
                 stroke="#F96D00"/>
     </svg>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
