--- a/es/index_es.html
+++ b/es/index_es.html
@@ -55,7 +55,7 @@
 </nav>
 
 <section class="home-slider owl-carousel">
-	<div class="slider-item" style="background-image:url(images/bg_2.jpg);">
+	<div class="slider-item" style="background-image:url(../images/bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -63,16 +63,16 @@
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Mejorar Mentes, Construir Futuro</h2>
 					<p>
-						<a href="products_es.html" class="btn btn-light px-4 py-3">Canal Expansión</a>
+						<a href="products_es.html" class="btn btn-green px-4 py-3">Canal Expansión</a>
 						<a href="ittech_es.html" class="btn btn-info px-4 py-3">Tecnología Informatica para Empresa</a>
-						<a href="gooverseas_es.html" class="btn btn-primary px-4 py-3">Servicios para Empresa China</a>
+						<a href="gooverseas_es.html" class="btn btn-blue px-4 py-3">Servicios para Empresa China</a>
 						<a href="investment_es.html" class="btn btn-success px-4 py-3">Inversión y Seguro</a>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="slider-item" style="background-image:url(images/bg_3.jpg);">
+	<div class="slider-item" style="background-image:url(../images/bg_3.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
