--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">首页</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">渠道拓展</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
-
 				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
@@ -69,17 +68,16 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item dropdown">
 					<a  class="nav-item dropdown-toggle" data-toggle="dropdown">
-						简体中文
+						Language
 					</a>
 					<ul class="dropdown-menu dropdown">
-						<!--						<li style="width: 100% "><a href="index.html" >简体中文</a></li>-->
-						<li style="width: 100%"><a href="index_en.html">English</a></li>
-						<!--						<li style="width: 100%"><a href="index_es.html">Español</a></li>-->
+						<li style="width: 100% "><a href="index.html" >简体中文</a></li>
+						<li style="width: 100%"><a href="en/index.html">English</a></li>
+						<!--						<li style="width: 100%"><a href="es/index.html">Español</a></li>-->
 					</ul>
 				</li>
 			</ul>
 		</div>
-
 
 	</div>
 </nav>
@@ -92,10 +90,10 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Improving Minds, Building Future</h2>
-					<p><a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+					<p><a href="products.html" class="btn btn-green px-4 py-3"> 渠道拓展</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-blue px-4 py-3"> 中资落地服务</a>
 						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
@@ -110,10 +108,10 @@
 					<h1 class="mb-4">睿泽国际</h1>
 					<h2 style = "color: #f7f8f8">启迪智慧，创造未来</h2>
 					<p>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+						<a href="products.html" class="btn btn-green px-4 py-3"> 渠道拓展</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-blue px-4 py-3"> 中资落地服务</a>
 						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
@@ -128,10 +126,10 @@
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Mejorar Mentes, Construir Futuro</h2>
 					<p>
-						<a href="products.html" class="btn btn-light px-4 py-3"> 渠道拓展</a>
+						<a href="products.html" class="btn btn-green px-4 py-3"> 渠道拓展</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 
-						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-blue px-4 py-3"> 中资落地服务</a>
 						<a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 					</p>
 				</div>
