--- a/en/about_en.html
+++ b/en/about_en.html
@@ -6,30 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -41,14 +41,14 @@
 </nav>
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_7.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">About BOI</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index_en.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="contact_en.html">Contact<i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="news_en.html">News <i class="ion-ios-arrow-forward"></i></a></span></div>
 		</div>
@@ -64,7 +64,7 @@
 			<div class="col-md-7 order-md-last wrap-about py-5 wrap-about bg-light">
 				<div class="text px-4 ftco-animate">
 					<h1 class="mb-4">Company Profile</h1>
-					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('images/teamwork.jpg');"></a></p>
+					<p><a class="block-20 d-flex align-items-end"  style="background-image: url('../images/teamwork.jpg');"></a></p>
 					<p>BOI(Brain Ocean International S.L.) is a team composed of senior Chinese business managers, who have been in Spain for more than 20 years, and a number of economic and trade Spanish experts who are highly respected in Spain.
 						The team provide consulting and business agency services for European and Chinese-funded enterprises in connection with various resources and expansion.
 						The team has multiple interdisciplinary masters and doctors, and undertakes business and technical support for various vertical subdivision industries,
@@ -74,7 +74,7 @@
 					<p>1) Channel expansion: as an agent to sell products of the company, promote and operate products in  in the Spain and other country in Europe.
 						Assist enterprises in the planning and organization of various marketing activities, help Chinese-funded enterprises enter the Iberia market,
 						connect channels with local enterprise decision-makers, build marketing networks, and promote and achieve business goals.</p>
-					<p>2) Enterprise IT technology solutions: provide office IT facilities services for enterprises in Spian, including network construction,
+					<p>2) Enterprise IT Solutionnology solutions: provide office IT facilities services for enterprises in Spian, including network construction,
 						enterprise office software, enterprise cloud infrastructure, security systems, etc.</p>
 					<p>3) Services for Chinese Enterprise: As an incubator for Chinese-funded enterprises going overseas,
 						it helps enterprises to solve related matters in the early stage of going overseas, provides professional Spanish-Portuguese talent hunting services for enterprises,
@@ -111,7 +111,7 @@
 					<div class="services-2 d-flex">
 						<div class="icon mt-2 mr-2 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
 						<div class="text">
-							<a href="ittech_en.html"><h2>Enterprise IT Tech</h2></a>
+							<a href="ittech_en.html"><h2>Enterprise IT Solution</h2></a>
 							<a ><h5>Cloud Solution</h5></a>
 							<a ><h5>Enterprise Network Solution</h5></a>
 							<a ><h5>Enterprise Security Solution</h5></a>
@@ -168,7 +168,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">CEO</h3>
 						<h3>Yanik Yang</h3>
 						<p>The only Chinese in Spain who has the European financial investment consultant license EFA,
@@ -180,7 +180,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/consult1.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/consult1.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">Senior Business Development Consultant</h3>
 						<h3>Javier F</h3>
 						<p>Javier F is a senior figure in the Spanish financial industry, he is the global business leader of ACF Securities Investment Company in charge of  Spanish national debt.
@@ -191,7 +191,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/consult2.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/consult2.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">Senior Business Development Consultant</h3>
 						<h3>Marc Dot</h3>
 						<p>Mr. Marc Dot is a senior consultant of Spanish corporate strategy, who once worked as a senior executive of a multinational company,
@@ -203,7 +203,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/consult3.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/consult3.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">Senior Business Development Consultant</h3>
 						<h3>Jordi Albert</h3>
 						<p>Mr. Jordi Albert is the former chairman of the Spanish Association of Economics and Entrepreneurs, has a deep understanding of the Spanish economy, and has unique insights into and promotion of the internationalization of Spanish companies.
@@ -215,7 +215,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/consultant5.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/consultant5.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">CTO</h3>
 						<h3>David Murillo</h3>
 						<p>More than 15 years of work experience as senior IT engineer, Network Engineer, Software Engineer, Cloud solution architect, IT product preSale.</p>
@@ -226,7 +226,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/cto.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/cto.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">Senior Solution Architect</h3>
 						<h3>Lisa Hu</h3>
 						<p>More than 10 years of work experience as senior IT engineer, Network Engineer, Software Engineer, Cloud solution architect, IT product preSale.</p>
@@ -237,7 +237,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">CMO</h3>
 						<h3>Teresa Zhang</h3>
 						<p>Senior Event Planning Experts, Marketing Experts, Senior Designer.</p>
@@ -247,7 +247,7 @@
 			<div class="col-md-3 d-flex">
 				<div class="bg-light align-items-stretch box p-4 text-center">
 					<div>
-						<img src="images/consultant4.jpg" alt = "" width="100%" height="100%" style="align-items: center">
+						<img src="../images/consultant4.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h3 class="mb-4">Design Director</h3>
 						<h3>Jose M Nuñez</h3>
 						<p>Architect, Senior Designer, Senior Project Manager.</p>
@@ -259,7 +259,7 @@
 	</div>
 </section>
 
-<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/image_5.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(../images/image_5.jpg);" data-stellar-background-ratio="0.5">
 	<div class="container">
 		<div class="row justify-content-center mb-5 pb-2">
 			<div class="col-md-8 text-center heading-section heading-section-black ftco-animate">
@@ -294,7 +294,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -309,9 +309,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain 2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain 2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -320,9 +320,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -338,9 +338,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -358,7 +358,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -379,21 +379,21 @@
 </footer>
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
