--- a/en/gooverseas_en.html
+++ b/en/gooverseas_en.html
@@ -6,30 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item active"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -44,22 +44,22 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_10.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_10.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">Services for Chinese Enterprise</h1>
 				<p class="breadcrumbs">
-<!--					<a href="gooverseas/gooverseas/go_en.html" class="btn btn-success px-4 py-3">Company Establishment</a>-->
-<!--					<a href="gooverseas/hr/hr_en.html" class="btn btn-success px-4 py-3">Talent Hunting</a>-->
-<!--					<a href="gooverseas/marketing/marketing_en.html" class="btn btn-success px-4 py-3">Marketing</a>-->
-<!--					<a href="gooverseas/admin/admin_en.html" class="btn btn-success px-4 py-3">Administrative Services</a>-->
+<!--					<a href="gooverseas/gooverseas/go_en.html" class="btn btn-success px-3 py-3">Company Establishment</a>-->
+<!--					<a href="gooverseas/hr/hr_en.html" class="btn btn-success px-3 py-3">Talent Hunting</a>-->
+<!--					<a href="gooverseas/marketing/marketing_en.html" class="btn btn-success px-3 py-3">Marketing</a>-->
+<!--					<a href="gooverseas/admin/admin_en.html" class="btn btn-success px-3 py-3">Administrative Services</a>-->
 
-					<a class="btn btn-success px-4 py-3">Company Establishment</a>
-					<a  class="btn btn-success px-4 py-3">Talent Hunting</a>
-					<a  class="btn btn-success px-4 py-3">Marketing</a>
-					<a  class="btn btn-success px-4 py-3">Administrative Services</a>
+					<a class="btn btn-blue px-3 py-3">Company Establishment</a>
+					<a  class="btn btn-blue px-3 py-3">Talent Hunting</a>
+					<a  class="btn btn-blue px-3 py-3">Marketing</a>
+					<a  class="btn btn-blue px-3 py-3">Administrative Services</a>
 			</div>
 		</div>
 	</div>
@@ -73,7 +73,7 @@
 
 			<div class="col-md-12 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/1.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../gooverseas/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">*****</span>
@@ -96,7 +96,7 @@
 
 			<div class="col-md-12 col-lg-3 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/hr/hr.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../gooverseas/hr/hr.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
 							<span class="yr">*****</span>
@@ -116,7 +116,7 @@
 
 			<div class="col-md-12 col-lg-3 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/marketing/marketing.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../gooverseas/marketing/marketing.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">*****</span>
@@ -137,7 +137,7 @@
 			<div class="col-md-12 col-lg-3 ftco-animate">
 				<div class="blog-entry">
 <!--					href="gooverseas/admin/admin_en.html"-->
-					<a class="block-20 d-flex align-items-end" style="background-image: url('gooverseas/admin/admin.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../gooverseas/admin/admin.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">*****</span>
@@ -161,7 +161,7 @@
 </section>
 
 
-<section class="ftco-intro" style="background-image: url(gooverseas/1.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../gooverseas/1.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
@@ -177,17 +177,17 @@
 					<div class="row no-gutters">
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/whatsapp.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+									<p><img src="../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/wechat.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+									<p><img src="../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
@@ -211,7 +211,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -226,9 +226,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -237,9 +237,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -255,9 +255,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -275,7 +275,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -296,21 +296,21 @@
 </footer>
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
