--- a/en/index.html
+++ b/en/index.html
@@ -6,31 +6,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -40,12 +40,12 @@
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item dropdown">
 					<a  class="nav-item dropdown-toggle" data-toggle="dropdown">
-						English
+						Language
 					</a>
 					<ul class="dropdown-menu dropdown">
-						<!--						<li style="width: 100% "><a href="index.html" >简体中文</a></li>-->
-						<li style="width: 100%"><a href="index.html">简体中文</a></li>
-						<!--						<li style="width: 100%"><a href="index_es.html">Español</a></li>-->
+						<li style="width: 100%"><a href="../index.html">简体中文</a></li>
+						<li style="width: 100%"><a href="../en/index.html">English</a></li>
+						<!--						<li style="width: 100%"><a href="../es/index.html">Español</a></li>-->
 					</ul>
 				</li>
 			</ul>
@@ -54,24 +54,24 @@
 </nav>
 
 <section class="home-slider owl-carousel">
-	<div class="slider-item" style="background-image:url(images/bg_1.jpg)">
+	<div class="slider-item" style="background-image:url(../images/bg_1.jpg)">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
-				<div class="col-md-12 suscribete_form">
+				<div class="col-md-12 suscribete_form ">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Improving Minds, Building Future</h2>
-					<p><a href="products_en.html" class="btn btn-light px-4 py-3">Channel Expansion</a>
-						<a href="ittech_en.html" class="btn btn-info px-4 py-3">Enterprise IT Tech</a>
+					<p><a href="products_en.html" class="btn btn-green p-3">Channel Expansion</a>
+						<a href="ittech_en.html" class="btn btn-info p-3">Enterprise IT Solution</a>
 
-						<a href="gooverseas_en.html" class="btn btn-primary px-4 py-3">Services for Chinese Enterprise</a>
-						<a href="investment_en.html" class="btn btn-success px-4 py-3">Investment & Insurance</a>
+						<a href="gooverseas_en.html" class="btn btn-blue p-3">Services for Chinese Enterprise</a>
+						<a href="investment_en.html" class="btn btn-success p-3">Investment & Insurance</a>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="slider-item" style="background-image:url(images/bg_3.jpg);">
+	<div class="slider-item" style="background-image:url(../images/bg_3.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -93,7 +93,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="products_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+					<a href="products_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/image_3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">1</span>
 						</div>
@@ -106,13 +106,13 @@
 			</div>
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="ittech_en.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+					<a href="ittech_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../ittech/network/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">2</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ittech_en.html">Enterprise IT Tech</a></h3>
+						<h3 class="heading"><a href="ittech_en.html">Enterprise IT Solution</a></h3>
 						<p>BOI Provides professional solutions such as enterprise IT infrastructure (network, server, data center, cloud), office software system, security system, etc.</p>
 					</div>
 				</div>
@@ -123,7 +123,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="gooverseas_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
+					<a href="gooverseas_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/bg_10.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">3</span>
 						</div>
@@ -137,7 +137,7 @@
 
 			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="investment_en.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+					<a href="investment_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../images/investment.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">4</span>
 						</div>
@@ -169,7 +169,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/solventis.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/solventis.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch align-content-center">
-							<a ><img src="images/partners/huawei.jpg"  class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/huawei.jpg"  class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -190,7 +190,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/mapfre.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/mapfre.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -201,7 +201,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch" >
 						<div class="img align-self-stretch align-content-center">
-							<a ><img src="images/partners/vivo.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/vivo.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -212,7 +212,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/hikvision.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/hikvision.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -223,7 +223,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/ruijie.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/ruijie.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -234,19 +234,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/orange.jpg" class="img-responsive-icon" ></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-
-			<div class="col-md-5 col-lg-1 ftco-animate">
-				<div class="staff">
-					<div class="img-wrap d-flex align-items-stretch">
-						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/hoenergy.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/orange.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -258,7 +246,19 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/oppo.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/hoenergy.jpg" class="img-responsive-icon" ></a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
+			<div class="col-md-5 col-lg-1 ftco-animate">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+						<div class="img align-self-stretch" >
+							<a ><img src="../images/partners/oppo.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/xiaomi.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/xiaomi.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -278,7 +278,7 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 						<div class="img align-self-stretch" >
-							<a ><img src="images/partners/camaramadrid.jpg" class="img-responsive-icon" ></a>
+							<a ><img src="../images/partners/camaramadrid.jpg" class="img-responsive-icon" ></a>
 						</div>
 					</div>
 				</div>
@@ -294,14 +294,14 @@
 		<div class="row no-gutters">
 
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_2.jpg);">
+				<a href="../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_2.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_3.jpg);">
+				<a href="../images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_3.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
@@ -309,14 +309,14 @@
 			</div>
 
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
+				<a href="../images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_4.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
 				</a>
 			</div>
 			<div class="col-md-3 ftco-animate">
-				<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_1.jpg);">
+				<a href="../images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/image_1.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
 						<span class="icon-instagram"></span>
 					</div>
@@ -342,7 +342,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -357,9 +357,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -368,9 +368,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -386,9 +386,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -406,7 +406,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -427,21 +427,21 @@
 </footer>
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
