--- a/en/investment_en.html
+++ b/en/investment_en.html
@@ -6,32 +6,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item active"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
-				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
+				<li class="nav-item active"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
 				<li class="nav-item"><a href="about_en.html" class="nav-link">About</a></li>
 				<li class="nav-item"><a href="contact_en.html" class="nav-link">Contact</a></li>
@@ -44,21 +44,19 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_8.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_11.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">Enterprise IT Tech Solution</h1>
-				<p class="breadcrumbs">
+				<h1 class="mb-2 bread">Investment & Insurance</h1>
 				<p>
-					<a class="btn btn-info px-4 py-3"> Cloud Solution</a>
-					<a  class="btn btn-info px-4 py-3"> Enterprise Network Solution</a>
-					<a  class="btn btn-info px-4 py-3"> Enterprise Security Solution</a>
-
-<!--				<a href="ittech/cloud/cloud_en.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>-->
-<!--				<a href="ittech/network/network_en.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>-->
-<!--				<a href="ittech/security/security_en.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>-->
+<!--					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> Financial Investment</a>-->
+<!--					<a href="investment/investment/investment_projects.html" class="btn btn-info px-4 py-3"> Asset Management</a>-->
+<!--					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE Insurance</a>-->
+					<a class="btn btn-info px-3 py-3"> Financial Investment</a>
+					<a class="btn btn-info px-3 py-3"> Asset Management</a>
+					<a class="btn btn-info px-3 py-3"> MAPFRE Insurance</a>
 				</p>
 			</div>
 		</div>
@@ -67,23 +65,27 @@
 
 
 
+
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div class = " row wrapper">
-			<div class="col-md-6 col-lg-4 ftco-animate wrapper" style="align-items: center">
+		<div id = "rowBlogs" class="row" class = "wrapper">
+			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('ittech/cloud.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../images/investment.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a>Cloud Solution</a></h3>
-						<p>BOI as senior partner of Huawei Cloud, Orange, the tecnical team provides enterprises highest
-							quality and efficient cloud technology solutions to promote enterprises to improve efficiency</p>
+						<h3 class="heading"><a >Financial Investment</a></h3>
+						<p>BOI CEO YanikAs a senior financial investment banking expert who has worked in Europe for more than 20 years,
+							he has the qualifications of a European listing sponsor, holds the European financial investment consultant license EFA and the US
+							heterogeneous financial investment analyst license CAIA, and provides tailor-made best risk-return global allocation for high-net-worth customers solution.</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="ittech/cloud/cloud_en.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="investment/investment/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="ml-auto mb-0">-->
+<!--							</p>-->
 <!--						</div>-->
 					</div>
 				</div>
@@ -92,18 +94,18 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('../images/asset-management.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
 							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a >Enterprise Network Solution</a></h3>
-						<p>BOI as a senior partner of companies such as Huawei Enterprise Networks and Ruijie Networks,
-							the senior IT technology solution team provides enterprises with the highest quality and efficient campus network and data center solutions.</p>
+						<h3 class="heading"><a >Asset Management</a></h3>
+						<p>BOI CEO YanikAs the only Chinese holding an asset management license in Iberia,
+							provides exclusive private banking and family asset management services for the global asset allocation needs of HNW high-net-worth individuals.</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="ittech/network/network_en.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="investment/investment/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--						</div>-->
 					</div>
 				</div>
@@ -112,18 +114,18 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
+					<a  class="block-20 d-flex align-items-end" style="background-image: url('../images/seguro.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">NEW</span>
 							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a>Enterprise Security Solution</a></h3>
-						<p>BOI as a senior partner of Hikvision, Dahua, etc., it provides security solutions such as video surveillance,
-							recorders, and storage devices, and serves all industries with IoT perception, artificial intelligence, and big data technologies.</p>
+						<h3 class="heading"><a >MAPFRE Insurance</a></h3>
+						<p>As a senior partner of Spain's largest insurance company MAPFRE and a financial asset management consultant,
+							it provides companies with a full range of insurance products, click to view the product catalog.</p>
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p  class="mb-0"><a href="ittech/security/security_en.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p  class="mb-0"><a href="investment/mapfre/mapfre_seguro.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--						</div>-->
 					</div>
 				</div>
@@ -135,34 +137,52 @@
 </section>
 
 
+<section class="home-slider owl-carousel">
+	<div class="slider-item" style="background-image:url(../images/seguro.jpg)">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<h1 class="mb-4">Recommended Insurance Products</h1>
+					<a></a><h2 style = "color: #f7f8f8">Employee High-end Medical Insurance</h2></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="slider-item" style="background-image:url(../investment/mapfre/mapfre-seguro.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
+				<div class="col-md-12 suscribete_form">
+					<h1 class="mb-4">Recommended Insurance Products</h1>
+					<a ></a><h2 style = "color: #f7f8f8">Enterprise Asset Protection Insurance</h2></a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
-
-<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<h2>Digitalization is the only way for enterprise development</h2>
-				<p class="mb-0">Infrastructure services to make business globally accessible</p>
-				<p class="mb-0">Technology as a service, making innovation within reach</p>
-				<p class="mb-0">Experience as a service, so that excellence can be replicated</p>
-				<br>
 				<h2>Scan QR code to contact for business negotiation</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/whatsapp.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+									<p><img src="../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
 
 						<div class="col-md-6 ftco-animate">
-							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../images/wechat.png);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
-									<p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+									<p><img src="../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
 								</div>
 							</a>
 						</div>
@@ -185,7 +205,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -200,9 +220,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -211,9 +231,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -229,9 +249,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -249,7 +269,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -270,23 +290,22 @@
 </footer>
 
 
-
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
