--- a/en/news_en.html
+++ b/en/news_en.html
@@ -6,30 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.loli.net/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.loli.net/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/aos.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="../css/magnific-popup.css">
+	<link rel="stylesheet" href="../css/aos.css">
+	<link rel="stylesheet" href="../css/ionicons.min.css">
+	<link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index_en.html"><img class="logo_img" style="height: 90px; width: auto" src="images/logo2.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 90px; width: auto" src="../images/logo2.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="index_en.html" class="nav-link pl-0">Home</a></li>
+				<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 				<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+				<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 				<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 				<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 				<li class="nav-item active"><a href="news_en.html" class="nav-link">News</a></li>
@@ -40,7 +40,7 @@
 	</div>
 </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_5.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -48,7 +48,7 @@
 				<h1 class="mb-2 bread">BOI News</h1>
 
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index_en.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="about_en.html">About <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="contact_en.html">Contact <i class="ion-ios-arrow-forward"></i></a></span></div>
 			</div>
@@ -65,7 +65,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="news/20230711/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230711/1.jpg');">
+					<a href="../news/20230711/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20230711/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">11</span>
 							<span class="mos">July</span>
@@ -73,10 +73,10 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+						<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 						<p>11th, Junly, 2023,  Huawei Cloud Startup Program hold in Huawei office, Las Tablas Madrid, BOI CEO Yanik Yangwas invited to attend.</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="news/20230711/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="../news/20230711/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 
 			<div  class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="news/20230710/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230710/1.jpg');">
+					<a href="../news/20230710/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20230710/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">05</span>
 							<span class="mos">July</span>
@@ -92,10 +92,10 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain 2023</a></h3>
+						<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain 2023</a></h3>
 						<p>5th, July,2023, Huawei Cloud Summit Spain 2023 hold in Madrid，BOI CEO Yanik Yang was invited to participate.</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="news/20230710/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="../news/20230710/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -105,7 +105,7 @@
 
 			<div  class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="news/20230424/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230424/1.jpg');">
+					<a href="../news/20230424/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20230424/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">24</span>
 							<span class="mos">April</span>
@@ -113,11 +113,11 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230424/news_en.html">BOI CEO Yanik, Huawei, Camara Madrid accompanying the Chinese delegation of Internet companies</a></h3>
+						<h3 class="heading"><a href="../news/20230424/news_en.html">BOI CEO Yanik, Huawei, Camara Madrid accompanying the Chinese delegation of Internet companies</a></h3>
 						<p>24th April, 2023, a group of Chinese Internet companies came to visit and study in Spain, BOI CEO Yanik as a local investment advisor,
 							accompanying the group to communinicate Camara Madrid,Spanish Foreign Trade Agency, local lawyers, Huawei Spain Office.</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="news/20230424/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="../news/20230424/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -128,7 +128,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="news/20230228/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230228/1.jpg');">
+					<a href="../news/20230228/news_en.html" class="block-20 d-flex align-items-end" style="background-image: url('../news/20230228/1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">28</span>
 							<span class="mos">Feb</span>
@@ -136,11 +136,11 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230228/news_en.html">BOI CEO Yanik was invited to attend  MWC Barcelona 2023</a></h3>
-						<p href="news/20230228/news.html">28th Feb, 2023, MWC Barcelona 2023, BOI CEO Yanik Yang was invited to attend.
+						<h3 class="heading"><a href="../news/20230228/news_en.html">BOI CEO Yanik was invited to attend  MWC Barcelona 2023</a></h3>
+						<p href="../news/20230228/news_en.html">28th Feb, 2023, MWC Barcelona 2023, BOI CEO Yanik Yang was invited to attend.
 							With CEO of Huawei spain hold the Stasrtup Program lighting ceremony.</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="news/20230228/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="../news/20230228/news_en.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -182,7 +182,7 @@
 						<ul>
 							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInt</span></li>
-							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -197,9 +197,9 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="../news/20230710/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -208,9 +208,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(../news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
+							<h3 class="heading"><a href="../news/20230711/news_en.html">BOI CEO Yanik was invited to attend Huawei Cloud Startup Program</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -226,9 +226,9 @@
 				<div class="ftco-footer-widget mb-5 ml-md-4">
 					<h2 class="ftco-heading-2">Links</h2>
 					<ul class="list-unstyled">
-						<li class="nav-item"><a href="index_en.html" class="nav-link">Home</a></li>
+						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="products_en.html" class="nav-link">Channel Expansion</a></li>
-						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Tech</a></li>
+						<li class="nav-item"><a href="ittech_en.html" class="nav-link">Enterprise IT Solution</a></li>
 						<li class="nav-item"><a href="gooverseas_en.html" class="nav-link">Services for Chinese Enterprise</a></li>
 						<li class="nav-item"><a href="investment_en.html" class="nav-link">Investment & Insurance</a></li>
 						<li class="nav-item"><a href="news_en.html" class="nav-link">News</a></li>
@@ -246,7 +246,7 @@
 					<div class="block-23 mb-3">
 						<ul>
 							<li><span class="icon icon-whatsapp"></span><span class="text">   Whatsapp: +34 604 902 828</span></li>
-							<li><img src="images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="../images/whatsappQRCode.png" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 
 						</ul>
 					</div>
@@ -268,21 +268,21 @@
 
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.waypoints.min.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/aos.js"></script>
+<script src="../js/jquery.animateNumber.min.js"></script>
+<script src="../js/scrollax.min.js"></script>
 <script src="https://ditu.google.cn/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/google-map.js"></script>
+<script src="../js/main.js"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
